# Govt-Services-Navigator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
docs/: VISION.md
docs/architecture/: ADR-001-environment-architecture.md  ADR-002-reward-design.md  ADR-003-agent-error-recovery.md  DESIGN-system-architecture.md
docs/product/: PRD-mana-mitra-phase3.md
docs/research/: RESEARCH-rl-best-practices.md  TECH-PROPOSAL-process-reward-models.md
knowledge_base/: driving_licence.json  pan_aadhaar.json  passport.json  vehicle_registration.json
scripts/: debug_hints.py  debug_test.py  quick_test.py  run_llm_test.py  stress_test.py
server/: app.py  env.py  grader.py  models.py
server/tasks/: task_driving_licence.py  task_pan_aadhaar.py  task_passport.py  task_vehicle_registration.py
tests/: test_agent_baseline.py  test_anti_exploit.py  test_env.py  test_smoke.py  test_vehicle_reg.py
