[project]
name = "govt-services-navigator"
version = "1.0.0"
description = "OpenEnv environment for navigating Indian government services"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.135.0",
    "uvicorn>=0.30.6",
    "pydantic>=2.9.2",
    "openai>=1.51.0",
    "httpx>=0.27.2",
]

[project.scripts]
server = "server.app:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
